--- a/public/knowaboutstd1.html
+++ b/public/knowaboutstd1.html
@@ -247,7 +247,7 @@
         <li><a href="imposefines.html"><span>💰</span> Impose Fines</a></li>
         <li><a href="addstudent.html"><span>➕</span> Add Student</a></li>
         <li><a href="staffsettings.html"><span>⚙️</span> Settings</a></li>
-        <li><a href="privacypolicy.html"><span>📄</span> Privacy policy</a></li>
+        <li><a href="privacypolicy.html"><span>📄</span> Privacy Policy</a></li>
       </ul>
       <button class="logout" onclick="logout()">Logout</button>
     </div>
