--- a/public/removestudents.html
+++ b/public/removestudents.html
@@ -81,6 +81,55 @@
   background: linear-gradient(to right, #5b86e5, #36d1dc);
   transform: scale(1.05);
 }
+    .mobile-toggle {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #1f75cb;
+  color: white;
+  font-size: 24px;
+  padding: 12px 18px;
+  border-radius: 50px;
+  z-index: 9999;
+  cursor: pointer;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+}
+
+@media (max-width: 768px) {
+  .mobile-toggle {
+    display: block;
+  }
+
+  .sidebar {
+    position: fixed;
+    top: -100%;
+    left: 0;
+    width: 100%;
+    max-height: 90vh;
+    background-color: #f7c99b;
+    overflow-y: auto;
+    transition: top 0.3s ease-in-out;
+    z-index: 1000;
+  }
+
+  .sidebar.open {
+    top: 0;
+  }
+
+  .main {
+    margin-left: 0 !important;
+    width: 100% !important;
+    padding: 20px;
+  }
+
+  body {
+    flex-direction: column;
+    overflow-x: hidden;
+  }
+}
+
 
   </style>
 </head>
@@ -110,7 +159,7 @@
     <div id="batchList" class="student-info" style="display:none;"></div>
     <button onclick="confirmBatchDelete()" style="background-color:#c0392b;">Delete Batch</button>
   </div>
-
+<div class="mobile-toggle" onclick="toggleSidebar()">☰</div>
 <script>
 let fetchedReg = "";
 
@@ -212,6 +261,44 @@ function confirmBatchDelete() {
     }
   });
 }
+function closeSidebarIfMobile() {
+  const sidebar = document.querySelector(".sidebar");
+  if (window.innerWidth <= 768) {
+    sidebar.classList.remove("open"); // forcibly close if on mobile
+  }
+}
+
+
+  function confirmDelete(regNo) {
+  Swal.fire({
+    title: "Are you sure?",
+    text: `This will delete all data for ${regNo}.`,
+    icon: "warning",
+    showCancelButton: true,
+    confirmButtonText: "Yes, delete it!",
+    cancelButtonText: "Cancel"
+  }).then((result) => {
+    if (result.isConfirmed) {
+      fetch("/delete-student", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ reg_no: regNo })
+      })
+      .then(res => res.json())
+      .then(data => {
+        if (data.success) {
+          // ✅ Refresh the page after deletion
+          Swal.fire("Deleted!", "Student has been removed.", "success").then(() => {
+            location.reload(); // 👈 This reloads the full page
+          });
+        } else {
+          Swal.fire("Error", data.message || "Deletion failed", "error");
+        }
+      });
+    }
+  });
+}
+
 </script>
 
 </body>
