--- a/public/removestudents.html
+++ b/public/removestudents.html
@@ -268,6 +268,9 @@ function closeSidebarIfMobile() {
   }
 }
 
+function toggleSidebar() {
+  document.querySelector(".sidebar").classList.toggle("open");
+}
 
   function confirmDelete(regNo) {
   Swal.fire({
