--- a/public/removestudents.html
+++ b/public/removestudents.html
@@ -81,6 +81,34 @@
   background: linear-gradient(to right, #5b86e5, #36d1dc);
   transform: scale(1.05);
 }
+    .sidebar {
+  width: 250px;
+  background-color: #f7c99b;
+  padding: 20px;
+  box-shadow: 2px 0 10px rgba(0,0,0,0.1);
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  z-index: 1001;
+  transition: all 0.3s ease-in-out;
+}
+
+@media (max-width: 768px) {
+  .sidebar {
+    position: fixed;
+    top: -100%;
+    width: 100%;
+    height: auto;
+    box-shadow: none;
+    background-color: #f7c99b;
+  }
+
+  .sidebar.open {
+    top: 0;
+  }
+}
+
     .mobile-toggle {
   display: none;
   position: fixed;
@@ -134,6 +162,15 @@
   </style>
 </head>
 <body>
+  <div class="sidebar">
+  <h2 style="text-align:center; color:#333;">Remove Students</h2>
+  <ul style="list-style: none; padding: 0;">
+    <li onclick="document.getElementById('regNo').scrollIntoView({behavior:'smooth'}); closeSidebarIfMobile()" style="padding: 12px; cursor: pointer;">🧍 Delete Student</li>
+    <li onclick="document.getElementById('batchPrefix').scrollIntoView({behavior:'smooth'}); closeSidebarIfMobile()" style="padding: 12px; cursor: pointer;">📦 Delete Batch</li>
+    <li onclick="window.location.href='adminpanel.html'; closeSidebarIfMobile()" style="padding: 12px; cursor: pointer;">🏠 Back to Admin Panel</li>
+  </ul>
+</div>
+
 <a href="adminpanel.html" class="back-btn">← Back to Admin Panel</a>
 
   <div class="card">
