--- a/public/index.html
+++ b/public/index.html
@@ -2,257 +2,339 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sir Crr Engg NOC Login Portal</title>
+  <title>CRR NOC Portal Login</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" href="crrengglogo.png" type="image/png" />
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron&family=Poppins:wght@300;500;700&display=swap" rel="stylesheet" />
   <style>
     :root {
-      --main-color: #8c0002;
-      --glow-color: #3cb6ff;
-      --bg-overlay: rgba(0, 0, 0, 0.6);
+      --main-color: #3cb6ff;
+      --accent-color: #ff3d3d;
       --text-light: #fefefe;
+      --glow: 0 0 15px var(--main-color);
     }
 
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-family: 'Poppins', sans-serif;
     }
 
     body {
       background: url('https://i.ytimg.com/vi/zKGq-sYdaw8/maxresdefault.jpg') no-repeat center center/cover;
       min-height: 100vh;
-      display: flex;
-      flex-direction: column;
+      overflow-x: hidden;
+      position: relative;
     }
 
-    .login-container {
-      flex: 1;
+    .overlay {
+      background: rgba(0, 0, 0, 0.6);
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: -1;
+    }
+
+    .main-wrapper {
       display: flex;
       flex-direction: column;
+      justify-content: flex-start;
       align-items: center;
-      justify-content: center;
-      background: var(--bg-overlay);
-      padding-top: 20px;
+      min-height: calc(100vh - 80px);
+      padding-top: 40px;
+      transition: all 0.8s ease;
     }
 
-    .mobile-strip {
-      color: #01ddff;
-      padding: 8px 20px;
-      font-size: 13px;
+    .main-wrapper.shift-up {
+      transform: translateY(-80px);
+    }
+
+    .branding {
       text-align: center;
-      border-radius: 12px 12px 0 0;
-      width: 400px;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-      margin-bottom: 15px;
-      font-weight: 500;
-    }
-
-    .login-box {
-      background: rgba(255, 255, 255, 0.05);
-      border: 1px solid rgba(255, 255, 255, 0.15);
-      box-shadow: 0 0 25px rgba(0, 191, 255, 0.2);
-      backdrop-filter: blur(15px);
-      border-radius: 20px;
-      padding: 40px 35px;
-      width: 100%;
-      max-width: 400px;
-      animation: fadeSlide 1.2s ease;
-      transition: transform 0.4s ease;
-    }
-
-    .login-box:hover {
-      transform: scale(1.02);
-      box-shadow: 0 0 40px var(--glow-color);
-    }
-
-    @keyframes fadeSlide {
-      0% {
-        transform: translateY(40px);
-        opacity: 0;
-      }
-      100% {
-        transform: translateY(0);
-        opacity: 1;
-      }
-    }
-
-    .login-box h2 {
-      color: var(--text-light);
-      font-size: 24px;
-      text-shadow: 0 0 8px var(--main-color);
-      margin-bottom: 30px;
-      font-weight: 700;
-      text-align: center;
-    }
-
-    .login-box input,
-    .login-box select {
-      width: 100%;
-      padding: 14px;
-      margin-bottom: 20px;
-      border-radius: 12px;
-      background: rgba(255, 255, 255, 0.1);
-      border: 1px solid rgba(255, 255, 255, 0.2);
       color: white;
-      font-size: 15px;
-      transition: 0.3s ease;
+      transform: translateY(-10px);
+      animation: popIn 1.2s ease forwards;
+      transition: transform 0.8s ease, opacity 0.8s ease;
     }
 
-    .login-box select option {
-      font-weight: 600;
-      color: #111;
-      background-color: #fff;
+    .branding img {
+      width: 90px;
+      margin-bottom: 10px;
+      filter: drop-shadow(0 0 8px rgba(255,255,255,0.5));
+      animation: logoFloat 2s ease-in-out infinite alternate;
     }
 
-    .login-box input::placeholder,
-    .login-box select {
+    @keyframes logoFloat {
+      0% { transform: translateY(0); }
+      100% { transform: translateY(-6px); filter: drop-shadow(0 0 12px rgba(255,255,255,0.9)); }
+    }
+
+    .branding h1 {
+      font-size: 28px;
+      text-shadow: var(--glow);
+    }
+
+    .branding p {
+      font-size: 14px;
       color: #ccc;
     }
 
-    .login-box input:focus,
-    .login-box select:focus {
-      outline: none;
-      border-color: var(--glow-color);
-      box-shadow: 0 0 10px var(--glow-color);
+    .role-buttons {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 20px;
+      margin: 25px 0;
+      animation: fadeInButtons 1.4s ease;
     }
 
-    .login-box button {
-      width: 100%;
-      padding: 14px;
-      background: linear-gradient(135deg, #3cb6ff, #ff3d3d);
-      color: #fff;
+    .role-button {
+      padding: 12px 24px;
       font-size: 16px;
+      border-radius: 12px;
       font-weight: 600;
-      border: none;
-      border-radius: 50px;
+      background: rgba(255, 255, 255, 0.08);
+      color: #fff;
+      border: 1px solid transparent;
       cursor: pointer;
+      transition: 0.3s ease;
       position: relative;
-      overflow: hidden;
-      transition: all 0.4s ease;
-      box-shadow: 0 0 15px rgba(255, 77, 77, 0.6);
     }
 
-    .login-box button::before {
+    .role-button::after {
       content: "";
       position: absolute;
-      top: -50%;
-      left: -50%;
-      width: 200%;
-      height: 200%;
-      background: radial-gradient(circle at center, rgba(255, 255, 255, 0.25) 0%, transparent 70%);
-      transform: scale(0);
-      transition: transform 0.4s ease;
+      bottom: 0;
+      left: 0;
+      height: 3px;
+      width: 0;
+      background: var(--main-color);
+      transition: 0.3s ease;
     }
 
-    .login-box button:hover {
-      background: linear-gradient(135deg, #3cb6ff, #ff6a6a);
-      box-shadow: 0 0 25px #3cb6ff, 0 0 40px rgba(255, 77, 77, 0.4);
+    .role-button:hover::after, .role-button.active::after {
+      width: 100%;
     }
 
-    .login-box button:hover::before {
-      transform: scale(1);
-      animation: shine 0.8s ease forwards;
+    .role-button:hover, .role-button.active {
+      border: 1.5px solid var(--main-color);
+      background: rgba(60, 182, 255, 0.2);
+      box-shadow: 0 0 12px var(--main-color);
     }
 
-    @keyframes shine {
-      0% {
-        transform: scale(0);
-        opacity: 0.7;
-      }
-      100% {
-        transform: scale(2);
-        opacity: 0;
-      }
+    .login-container {
+      display: none;
+      opacity: 0;
+      transform: translateY(100px) scale(0.95);
+      transition: opacity 1s ease-in-out, transform 1s ease-in-out;
+      max-width: 400px;
+      width: 90%;
+      background: rgba(255, 255, 255, 0.05);
+      backdrop-filter: none;
+      transition: opacity 1s ease-in-out, transform 1s ease-in-out;
+      border-radius: 20px;
+      padding: 30px;
+      border: 1px solid rgba(255, 255, 255, 0.15);
+      box-shadow: 0 0 25px rgba(0,191,255,0.2);
+      margin-top: 20px;
     }
 
-.footer {
-  text-align: center;
-  padding: 12px;
-  background: rgba(0, 0, 0, 0.4); /* Soft transparent overlay */
-  color: #fff;
-  font-size: 13.5px;
-  backdrop-filter: blur(5px);
-  border-top: 1px solid rgba(255, 255, 255, 0.1);
-}
+    .login-container.show {
+      display: block !important;
+      opacity: 1;
+      transform: translateY(0) scale(1);
+    }
 
+    .login-container h2 {
+      color: white;
+      text-align: center;
+      margin-bottom: 20px;
+    }
+
+    .login-container input {
+      width: 100%;
+      padding: 12px;
+      margin-bottom: 15px;
+      border-radius: 10px;
+      background: rgba(255,255,255,0.1);
+      border: 1px solid rgba(255,255,255,0.2);
+      color: white;
+    }
+
+    .login-container input::placeholder {
+      color: #ccc;
+    }
+
+    .login-container button {
+      width: 100%;
+      padding: 14px;
+      background: linear-gradient(135deg, var(--main-color), var(--accent-color));
+      border: none;
+      border-radius: 50px;
+      color: white;
+      font-weight: bold;
+      font-size: 16px;
+      cursor: pointer;
+      box-shadow: 0 0 15px var(--main-color);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .login-container button:hover {
+      transform: scale(1.03);
+      box-shadow: 0 0 25px var(--accent-color);
+    }
+
+    .footer {
+      text-align: center;
+      padding: 12px;
+      color: #ccc;
+      font-size: 13px;
+      background: rgba(0, 0, 0, 0.6);
+    }
+
+    a { color: var(--main-color); text-decoration: none; }
 
     @media (max-width: 480px) {
-      .login-box {
-        padding: 30px 20px;
-      }
-
-      .login-box h2 {
-        font-size: 20px;
-      }
+      .login-container { margin: 20px; padding: 20px; }
+      .branding h1 { font-size: 20px; }
     }
   </style>
 </head>
 <body>
-  <div class="login-container">
-    <div class="mobile-strip">📢 For the best experience, please switch to Desktop Site.</div>
-    <div class="login-box">
-      <h2>Login to NOC Portal</h2>
-      <form id="loginForm">
-        <input type="text" id="userId" placeholder="Enter Your ID" required />
-        <input type="password" id="password" placeholder="Enter Password" required />
-        <select id="role" required>
-          <option value="" disabled selected>Select Role</option>
-          <option value="student">Student</option>
-          <option value="staff">Staff</option>
-          <option value="admin">Admin</option>
-        </select>
-        <button type="submit">Login</button>
-        <div style="text-align: right; margin-top: 8px;">
-  <a href="forgotpassword.html" style="color: #3cb6ff; font-size: 14px; text-decoration: none;">
-    Forgot Password?
-  </a>
-</div>
-
-      </form>
-    </div>
+<div class="overlay"></div>
+<main class="main-wrapper" id="mainWrapper">
+<main class="main-wrapper" id="mainWrapper">
+  <!-- Branding -->
+  <div class="branding">
+    <img src="crrengglogo.png" alt="CRR Logo" />
+    <h1>Sir C.R.R. College of Engineering</h1>
+    <p>Empowering Education with Technology</p>
   </div>
 
-  <footer class="footer">
-    © 2025 Sir C.R. Reddy College of Engineering. All rights reserved.
-  </footer>
+  <!-- Role Selection -->
+  <div class="role-buttons">
+    <div class="role-button" data-role="student">👨‍🎓 Student</div>
+    <div class="role-button" data-role="staff">👨‍🏫 Staff</div>
+    <div class="role-button" data-role="admin">🛡️ Admin</div>
+  </div>
 
-  <script>
-    document.getElementById("loginForm").addEventListener("submit", function (e) {
-      e.preventDefault();
+  <!-- Student Login -->
+  <div class="login-container hidden" id="student-login">
+    <h2>Student Login</h2>
+    <form onsubmit="submitLogin(event, 'student')">
+      <input type="text" placeholder="Enter Student ID" required />
+      <input type="password" placeholder="Enter Password" required />
+      <button type="submit">Login as Student</button>
+    </form>
+  </div>
 
-      const userId = document.getElementById("userId").value;
-      const password = document.getElementById("password").value;
-      const role = document.getElementById("role").value;
+  <!-- Staff Login -->
+  <div class="login-container hidden" id="staff-login">
+    <h2>Staff Login</h2>
+    <form onsubmit="submitLogin(event, 'staff')">
+      <input type="text" placeholder="Enter Staff ID" required />
+      <input type="password" placeholder="Enter Password" required />
+      <button type="submit">Login as Staff</button>
+    </form>
+  </div>
 
-      fetch("https://crr-noc.onrender.com/login", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ userId, password, role })
-      })
-      .then(res => res.json())
-      .then(data => {
-        if (data.success) {
-          localStorage.setItem("userId", data.userId);
-          localStorage.setItem("role", role);
+  <!-- Admin Login -->
+  <div class="login-container hidden" id="admin-login">
+    <h2>Admin Login</h2>
+    <form onsubmit="submitLogin(event, 'admin')">
+      <input type="text" placeholder="Enter Admin ID" required />
+      <input type="password" placeholder="Enter Password" required />
+      <button type="submit">Login as Admin</button>
+    </form>
+  </div>
+</main>
 
-          if (role === "admin") {
-            window.location.href = "adminpanel.html";
-          } else if (role === "student") {
-            window.location.href = "studentdetails.html";
-          } else if (role === "staff") {
-            window.location.href = "knowaboutstd1.html";
-          }
-        } else {
-          alert(data.message);
-        }
-      })
-      .catch(error => {
-        alert("Error connecting to server.");
-        console.error(error);
-      });
+</main>
+<div class="footer">
+  © 2025 Sir C.R.R. College of Engineering. All rights reserved.<br />
+  Developed by CSE Final Year Students | <a href="privacypolicy.html">Privacy Policy</a>
+</div>
+<script>
+  const buttons = document.querySelectorAll('.role-button');
+  const wrapper = document.getElementById('mainWrapper');
+  const containers = {
+    student: document.getElementById("student-login"),
+    staff: document.getElementById("staff-login"),
+    admin: document.getElementById("admin-login")
+  };
+
+  function hideAll() {
+    Object.values(containers).forEach(el => {
+      el.classList.remove("show");
+      el.classList.add("hidden");
     });
-  </script>
+  }
+
+  buttons.forEach(btn => {
+    btn.addEventListener("click", () => {
+      buttons.forEach(b => b.classList.remove("active"));
+      btn.classList.add("active");
+      const role = btn.dataset.role;
+      hideAll();
+      wrapper.classList.add('shift-up');
+      setTimeout(() => {
+        containers[role].classList.remove("hidden");
+        containers[role].classList.add("show");
+      }, 400);
+    });
+  });
+
+  hideAll();
+
+async function submitLogin(event, role) {
+  event.preventDefault();
+
+  const form = event.target;
+  const userId = form.querySelector('input[type="text"]').value.trim();
+  const password = form.querySelector('input[type="password"]').value.trim();
+
+  const response = await fetch("/login", {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({ userId, password, role })
+  });
+
+  const result = await response.json();
+
+  if (result.success) {
+    showModal("✅ Login Successful", `Welcome ${role.toUpperCase()} - ${userId}`);
+    // Optional: redirect after delay
+    setTimeout(() => {
+      window.location.href = `/dashboard/${userId}`;
+    }, 2000);
+  } else {
+    showModal("❌ Login Failed", result.message || "Invalid credentials.");
+  }
+}
+function showModal(title, message) {
+  const modal = document.createElement("div");
+  modal.style.position = "fixed";
+  modal.style.top = "50%";
+  modal.style.left = "50%";
+  modal.style.transform = "translate(-50%, -50%)";
+  modal.style.background = "#fff";
+  modal.style.padding = "20px 30px";
+  modal.style.borderRadius = "10px";
+  modal.style.boxShadow = "0 0 15px rgba(0,0,0,0.2)";
+  modal.style.zIndex = 9999;
+  modal.style.textAlign = "center";
+  modal.style.color = "#333";
+  modal.innerHTML = `
+    <h3 style="margin-bottom: 10px;">${title}</h3>
+    <p>${message}</p>
+  `;
+  document.body.appendChild(modal);
+  setTimeout(() => modal.remove(), 3000);
+}
+
+</script>
 </body>
 </html>
