--- a/public/index.html
+++ b/public/index.html
@@ -226,7 +226,13 @@
     <h2>Student Login</h2>
     <form onsubmit="submitLogin(event, 'student')">
       <input type="text" placeholder="Enter Student ID" required />
-      <input type="password" placeholder="Enter Password" required />
+<input type="password" placeholder="Enter Password" required />
+<div style="text-align: right; margin: -10px 0 15px;">
+  <a href="forgotpassword.html" style="color: #3cb6ff; font-size: 14px; text-decoration: none;">
+    Forgot Password?
+  </a>
+</div>
+
       <button type="submit">Login as Student</button>
     </form>
   </div>
@@ -236,7 +242,13 @@
     <h2>Staff Login</h2>
     <form onsubmit="submitLogin(event, 'staff')">
       <input type="text" placeholder="Enter Staff ID" required />
-      <input type="password" placeholder="Enter Password" required />
+<input type="password" placeholder="Enter Password" required />
+<div style="text-align: right; margin: -10px 0 15px;">
+  <a href="forgotpassword.html" style="color: #3cb6ff; font-size: 14px; text-decoration: none;">
+    Forgot Password?
+  </a>
+</div>
+
       <button type="submit">Login as Staff</button>
     </form>
   </div>
@@ -247,6 +259,12 @@
     <form onsubmit="submitLogin(event, 'admin')">
       <input type="text" placeholder="Enter Admin ID" required />
       <input type="password" placeholder="Enter Password" required />
+<div style="text-align: right; margin: -10px 0 15px;">
+  <a href="forgotpassword.html" style="color: #3cb6ff; font-size: 14px; text-decoration: none;">
+    Forgot Password?
+  </a>
+</div>
+
       <button type="submit">Login as Admin</button>
     </form>
   </div>
