--- a/public/index.html
+++ b/public/index.html
@@ -273,7 +273,7 @@
 </main>
 <div class="footer">
   © 2025 Sir C.R.R. College of Engineering. All rights reserved.<br />
-  Developed by CSE Final Year Students | <a href="privacypolicy.html">Privacy Policy</a>
+  Developed by CSC 2023-2027 Batch Students | <a href="privacypolicy.html">Privacy Policy</a>
 </div>
 <script>
   const buttons = document.querySelectorAll('.role-button');
