--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
       justify-content: flex-start;
       align-items: center;
       min-height: calc(100vh - 80px);
-      padding-top: 40px;
+      padding-top: 50px;
       transition: all 0.8s ease;
     }
 
@@ -98,7 +98,7 @@
       font-weight: 600;
       background: rgba(255, 255, 255, 0.08);
       color: #fff;
-      border: 1px solid transparent;
+      border: 0px solid transparent;
       cursor: pointer;
       transition: 0.3s ease;
       position: relative;
@@ -130,16 +130,16 @@
       opacity: 0;
       transform: translateY(100px) scale(0.95);
       transition: opacity 1s ease-in-out, transform 1s ease-in-out;
-      max-width: 400px;
+      max-width: 380px;
       width: 90%;
       background: rgba(255, 255, 255, 0.05);
       backdrop-filter: none;
       transition: opacity 1s ease-in-out, transform 1s ease-in-out;
       border-radius: 20px;
-      padding: 30px;
+      padding: 25px;
       border: 1px solid rgba(255, 255, 255, 0.15);
       box-shadow: 0 0 25px rgba(0,191,255,0.2);
-      margin-top: 20px;
+      margin-top: 5px;
     }
 
     .login-container.show {
@@ -151,7 +151,7 @@
     .login-container h2 {
       color: white;
       text-align: center;
-      margin-bottom: 20px;
+      margin-bottom: 15px;
     }
 
     .login-container input {
@@ -189,10 +189,11 @@
 
     .footer {
       text-align: center;
-      padding: 12px;
+      padding: 10px;
       color: #ccc;
       font-size: 13px;
       background: rgba(0, 0, 0, 0.6);
+      padding-top: 3px;
     }
 
     a { color: var(--main-color); text-decoration: none; }
@@ -211,7 +212,7 @@
   <div class="branding">
     <img src="crrengglogo.png" alt="CRR Logo" />
     <h1>Sir C.R.R. College of Engineering</h1>
-    <p>Empowering Education with Technology</p>
+    <p>Jnanam Okkati Nilichi Velugunu</p>
   </div>
 
   <!-- Role Selection -->
@@ -272,7 +273,6 @@
 
 </main>
 <div class="footer">
-  © 2025 Sir C.R.R. College of Engineering. All rights reserved.<br />
   Developed by CSC 2023-2027 Batch Students | <a href="privacypolicy.html">Privacy Policy</a>
 </div>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
