--- a/public/index.html
+++ b/public/index.html
@@ -195,7 +195,22 @@
       background: rgba(0, 0, 0, 0.6);
       padding-top: 3px;
     }
-
+     .accreditation {
+  margin-top: 8px;
+  font-size: 13px;
+  color: #a0e7ff;
+  font-weight: 500;
+  text-shadow: 0 0 4px rgba(0, 255, 255, 0.3);
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 8px;
+  animation: fadeIn 1.6s ease-in;
+}
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(-10px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
     a { color: var(--main-color); text-decoration: none; }
 
     @media (max-width: 480px) {
@@ -212,7 +227,12 @@
   <div class="branding">
     <img src="crrengglogo.png" alt="CRR Logo" />
     <h1>Sir C.R.R. College of Engineering</h1>
-    <p>Jnanam Okkati Nilichi Velugunu</p>
+    <div class="accreditation">
+    <span>🎖️ NAAC A Grade Accredited</span> |
+    <span>🏛️ Autonomous Institution</span> |
+    <span>🎓 Affiliated to JNTU-Kakinada</span>
+  </div>
+</div>
   </div>
 
   <!-- Role Selection -->
